fix($mobile): fixed author spacing on projects card

--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -73,7 +73,7 @@
 
             box-sizing: border-box;
             width: 340px;
-            height: 290px;
+            height: 300px;
             margin: 15px 0;
             padding: 20px;
 
@@ -171,7 +171,7 @@
     &__avatar
     {
         position: absolute;
-        bottom: 14px;
+        bottom: 12px;
         left: 20px;
 
         display: inline-flex;
@@ -182,6 +182,10 @@
 
         @include TYPE-ProjectsAuthor;
         align-items: center;
+
+        @media #{$tablet} {
+          bottom: 14px;
+        }
 
 
         img
